fix horizontal scroll bar on profile page

--- a/Project_Beachworm/frontend/src/pages/profile/ProfilePage.css
+++ b/Project_Beachworm/frontend/src/pages/profile/ProfilePage.css
@@ -1,7 +1,6 @@
 .profile-header_container {
     display: flex;
     align-items: center;
-    width: 100%;
     padding: 2em;
 }
 
